# tg_downloader

./: .gitignore  README.md  pyproject.toml  utils.py
src/: main.py
src/application/ai_video_analizer/: main.py  prompt.py
src/application/instadowloader/: __init__.py  ind.py
src/application/telegram_bot/: __init__.py  main_router.py
src/application/telegram_bot/chat/: __init__.py  filters.py  router.py
src/application/telegram_bot/chat/handlers/: __init__.py
src/application/telegram_bot/chat/handlers/commands/: __init__.py  start.py
src/application/telegram_bot/chat/handlers/default/: __init__.py  monitoring.py
src/application/telegram_bot/chat/servises/: __init__.py  user_services.py
src/application/telegram_bot/commands/: __init__.py  help.py  router.py
src/application/telegram_bot/super_groupe/: __init__.py  filters.py  router.py  utils.py
src/application/telegram_bot/super_groupe/handlers/: __init__.py
src/application/telegram_bot/super_groupe/handlers/default/: __init__.py  activation.py  monitoring.py
src/application/telegram_bot/super_groupe/services/: chat_service.py
src/application/tiktok_down/: __init__.py  tt_api.py  tt_downloader.py  utils.py
src/core/: __init__.py
src/core/bot/: __init__.py  init_bot.py  lifespan.py
src/core/database/: __init__.py  db_service.py
src/settings/: config.py  logging.py
